Fixed the bug regarding some items not showing

--- a/style.css
+++ b/style.css
@@ -368,7 +368,7 @@ a{
 
   #csv-display{
     width: 70% !important;
-    margin-left: 20%;
+    margin-left: 15%;
   }
 
   #container{
